-------------------------
- ClientBase/Client/NonSaslAuth: made re-connect-safe
- MessageEventFilter: fixed sending of MessageEventCancel
- MessageEventFilter: fixed handling of IDs
- ChatStateFilter: fixed hypothetical revival of chat states
- Connection: fixed timeout conversion
- Connection: fixed 'valid from' and 'valid to' with gnutls
- compile fix for gcc 4.3 (thanks to Martin Michlmayr)


v0.8.7-sic -- 06 Mar 2007
-------------------------
- ClientBase: allow cancellation of ID tracking
- VCardManager: allow cancellation of VCard operations
- ClientBase: ugly fix to avoid onDisconnect() being called twice


v0.8.6-sic -- 14 Dec 2006
-------------------------
- Tag: proper escaping of names/attributes/cdata (thanks to Polycom)
- VCardManager: call handleVCard if VCard is empty
- ClientBase: some disconnect fixes (thanks to Polycom)
- Adhoc: de-registrataion of commands
- Adhoc: supply IQ id in handleAdhocCommand()


v0.8.5-sic -- 10 Nov 2006
-------------------------
- JEP-0055 (Jabber Search)
- DataForm::tag() returns non-const Tag
- enable DataForm to parse <reported> and <item> elements
- DataFormBase: FieldList holds pointers to DataFormFields now
- DataForm: added simplified ctor
- MessageSession::send(): added default for subject param (empty)
- MessageSession: allow conversation started with bare JID to 'upgrade'
  to full JID when reply comes in
- RosterManager: keep Roster up-to-date even if no RosterListener is registered
- ClientBase: only log stanzas if actually sent
- ClientBase: more correct return value on disconnect


v0.8.4-sic -- 18 Sep 2006
-------------------------
- compile fix for Mac OS X (thanks to Geoff Schmidt)


v0.8.3-sic -- 14 Sep 2006
-------------------------
- ClientBase: added whitespace ping()
- VCard: fixed typo (vcard --> vCard)


v0.8.2-sic -- 11 Sep 2006
-------------------------
- find dn_skipname on Mac OS X (thanks to Geoff Schmidt)
- look for libgnutls-config in specified path, if given